# accelerate

./: .gitignore  accelerate.cabal
Data/Array/: Accelerate.hs
Data/Array/Accelerate/: AST.hs  ArBB.hs  Interpreter.hs  Language.hs  Prelude.hs  SimplAST.hs  SimplConvertAST.hs  Smart.hs  Tuple.hs  Type.hs
Data/Array/Accelerate/Analysis/: Shape.hs  Type.hs
Data/Array/Accelerate/Array/: Data.hs  Sugar.hs
Data/Array/Accelerate/CUDA/: Compile.hs  Execute.hs
Data/Array/Accelerate/CUDA/Analysis/: Launch.hs
Data/Array/Accelerate/Pretty/: Print.hs
accelerate-backend-kit/: README.md
accelerate-cuda/: accelerate-cuda.cabal
accelerate-cuda/Data/Array/Accelerate/CUDA/: CodeGen.hs  Compile.hs  Execute.hs  State.hs
accelerate-cuda/Data/Array/Accelerate/CUDA/Analysis/: Launch.hs
accelerate-cuda/Data/Array/Accelerate/CUDA/Array/: Data.hs  Prim.hs  Sugar.hs
tests/ArBB/: README  README-Measurements
tests/ArBB/Benchmarks/: Makefile
tests/ArBB/BlackScholes/: Main.hs  Makefile
