Name:                   accelerate
Version:                0.9.0.0
Cabal-version:          >= 1.6
Tested-with:            GHC >= 6.12.3
Build-type:             Simple

Synopsis:               An embedded language for accelerated array processing
Description:            This library defines an embedded language for
                        regular, multi-dimensional array computations with
                        multiple backends to facilitate high-performance
                        implementations.  Currently, there are two backends:
                        (1) an interpreter that serves as a reference
                        implementation of the intended semantics of the
                        language and (2) a CUDA backend generating code for
                        CUDA-capable NVIDIA GPUs.
                        .
                        To use the CUDA backend, you need to have CUDA version 3.x
                        installed.  The CUDA backend currently doesn't support 'Char'
                        and 'Bool' arrays.
                        .
                        Known bugs in this version:
                        <http://trac.haskell.org/accelerate/query?status=new&status=assigned&status=reopened&status=closed&version=0.8.1.0&order=priority>
                        .
                        * New in 0.8.1.0: bug fixes and some performance tweaks
                        .
                        * New in 0.8.0.0: 'replicate', 'slice' and 'foldSeg' supported in the
                            CUDA backend; frontend and interpreter support for 'stencil'; bug fixes
                        .
                        * New in 0.7.1.0: the CUDA backend and a number of scalar functions
                        .
License:                BSD3
License-file:           LICENSE
Author:                 Manuel M T Chakravarty,
                        Gabriele Keller,
                        Sean Lee,
                        Trevor L. McDonell
Maintainer:             Manuel M T Chakravarty <chak@cse.unsw.edu.au>
Homepage:               http://www.cse.unsw.edu.au/~chak/project/accelerate/
Bug-reports:            https://github.com/mchakravarty/accelerate/issues

Category:               Compilers/Interpreters, Concurrency, Data
Stability:              Experimental

Extra-source-files:     INSTALL
                        include/accelerate.h

Flag llvm
  Description:          Enable the LLVM backend (sequential)
  Default:              False

Flag more-pp
  Description:          Enable HTML and Graphviz pretty printing.
  Default:              False

Flag test-suite
  Description:          Export extra test modules
  Default:              False

Flag bounds-checks
  Description:          Enable bounds checking
  Default:              True

Flag unsafe-checks
  Description:          Enable bounds checking in unsafe operations
  Default:              False

Flag internal-checks
  Description:          Enable internal consistency checks
  Default:              False

Library
  Include-Dirs:         include
  Build-depends:        array           == 0.3.*,
                        base            == 4.*,
                        containers      >= 0.3 && < 0.5,
                        directory       >= 1.0 && < 1.2,
                        ghc-prim        == 0.2.*,
                        mtl             == 2.0.*,
                        pretty          >= 1.0 && < 1.2

--  if flag(test-suite)
--    Build-depends:      QuickCheck      == 2.*

  if flag(more-pp)
    Build-depends:      bytestring      == 0.9.*,
                        blaze-html      == 0.3.*,
                        text            == 0.10.*

  Exposed-modules:      Data.Array.Accelerate
                        Data.Array.Accelerate.AST
                        Data.Array.Accelerate.Analysis.Shape
                        Data.Array.Accelerate.Analysis.Stencil
                        Data.Array.Accelerate.Analysis.Type
                        Data.Array.Accelerate.Array.Data
                        Data.Array.Accelerate.Array.Representation
                        Data.Array.Accelerate.Array.Sugar
                        Data.Array.Accelerate.Interpreter
                        Data.Array.Accelerate.Pretty
                        Data.Array.Accelerate.Smart
                        Data.Array.Accelerate.Tuple
                        Data.Array.Accelerate.Type

--  If flag(test-suite)
--    Exposed-modules:    Data.Array.Accelerate.Test
--    Other-modules:      Data.Array.Accelerate.Test.QuickCheck
--                        Data.Array.Accelerate.Test.QuickCheck.Arbitrary

  Other-modules:        Data.Array.Accelerate.Internal.Check
                        Data.Array.Accelerate.Array.Delayed
                        Data.Array.Accelerate.Debug
                        Data.Array.Accelerate.Language
                        Data.Array.Accelerate.Prelude
                        Data.Array.Accelerate.Pretty.Print
                        Data.Array.Accelerate.Pretty.Traverse

  if flag(more-pp)
    Other-modules:      Data.Array.Accelerate.Pretty.HTML
                        Data.Array.Accelerate.Pretty.Graphviz

  if flag(bounds-checks)
    cpp-options:        -DACCELERATE_BOUNDS_CHECKS

  if flag(unsafe-checks)
    cpp-options:        -DACCELERATE_UNSAFE_CHECKS

  if flag(internal-checks)
    cpp-options:        -DACCELERATE_INTERNAL_CHECKS

  ghc-options:          -O2 -Wall -funbox-strict-fields -fno-warn-name-shadowing

  if impl(ghc >= 7.0)
    ghc-options:        -fspec-constr-count=25

  Extensions:           BangPatterns, CPP, DeriveDataTypeable, EmptyDataDecls,
                        FlexibleContexts, FlexibleInstances, GADTs, MagicHash,
                        MultiParamTypeClasses, PatternGuards, RankNTypes,
                        ScopedTypeVariables, StandaloneDeriving,
                        TemplateHaskell, TupleSections, TypeFamilies,
                        TypeOperators, TypeSynonymInstances, UnboxedTuples

source-repository head
  type:                 git
  location:             https://github.com/mchakravarty/accelerate

